--- a/src/site/asciidoc/main.adoc
+++ b/src/site/asciidoc/main.adoc
@@ -6,25 +6,15 @@ Doc Writer <doc.writer@example.org>
 ifndef::imagesdir[:imagesdir: images]
 ifndef::sourcedir[:sourcedir: ../../main/java]
 
-== Sample Java Files
+include::release-notes.adoc[]
 
-The App class in the base package is used for any JAX-RS configuration required
+include::sample-java.adoc[]
 
-== The liberty config folder
+include::liberty-config.adoc[]
 
-This folder contains the server configuration file and can also contain the jvm.options file.
-These are used when liberty is setup in the target folder to testing and should not be removed.
+include::meta-inf.adoc[]
 
-== The resources META-INF folder
+include::site.adoc[]
 
-This folder contains the beans.xml file which is required to bootstrap CDI so that you can use @Inject.
-If this file is removed, the @Inject will be ignored and you might encounter a null pointer exception.
+include::site-asciidoc.adoc[]
 
-== The site folder
-
-This folder is used by the maven site plugin to generate a website for the project with maven related info.
-
-== The site asciidoc folder
-
-This folder is used to house the documentation for the project.
-The asciidoc maven plugin uses this folder as its source to generate the asciidoc web and pdf output.
